# W65C02SEmu

./: .gitignore  6502  CMakeLists.txt  emu6502.h  main6502.cpp  main6502.h  makefile
6502Emu/: CMakeLists.txt
6502Emu/src/include/: 6502Emu.h  statusFlags6502.h
6502Test/: CMakeLists.txt  CMakeLists.txt.in
6502Test/src/: Test6502LoadRegisters.cpp
cpu/: cpu6502.h
emuW65C02S/: CMakeLists.txt  W65C02SEmu.h
emuW65C02S/src/: cpuW65C02S.cpp  instructionDecoderW65C02S.cpp
emuW65C02S/src/include/: cpu6502.h  emuW65C02S.h  insW65C02S.h  instructionDecoderW65C02S.h  memory6502.h  registersW65C02S.h  typesW65C02S.h
lib6502/: CMakeLists.txt  makefile
lib6502/cpu/: cpu6502.cpp
lib6502/memory/: memory6502.h
lib6502/src/cpu/: cpu6502.cpp  cpu6502.h
lib6502/statusFlags/: statusFlags6502.h
memory/: memory6502.h
statusFlags/: statusFlags6502.h
test6502/: CMakeLists.txt  makefile
test6502/src/: main_test6502.cpp
testW65C02S/: CMakeLists.txt
testW65C02S/src/: Test6502LoadRegisters.cpp  main_test6502.cpp
testW65C02S/src/tests/: W65C02STestInstructionDecoding.cpp
